outputs/dev/develop-3.out
$ spack install
[+] /usr (external glibc-2.35-epwvtixhoxdeufu6kbbrpaigv2p6iav4)
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/compiler-wrapper-1.0-rwnqblirwn5aenlmsbvsieo7mzw672ee
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gcc-runtime-12.5.0-zubbt4yxn35hmaarhmzluk6cb6gkujee
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gcc-runtime-11.4.0-3c5xh7dqudxmyorlsrsfmjyggqk57vnr
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libffi-3.4.8-4466i2xl4jqgqujxp4gefwnekgekq2tn
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libiconv-1.18-kgw5nkswdpf7k2itwhjwegwyszj3v56s
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libpciaccess-0.17-w5iqeddpn6xfxfm3grear6sow3p6eaa5
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/lz4-1.10.0-6ekevdfw2gsqq6xnmhn5pk7zt27l76hq
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/pkgconf-2.3.0-xoghzadcbbqi6ccvlnfkghrutmid3eav
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/json-cwx-0.12-5roxsj7nplojv6a2jvwb35lqimna2xu7
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/zlib-ng-2.2.4-g7ixtqygrfip5uzt526b565dqxs6ze3x
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libmd-1.1.0-7x6ozmzda7ayboscqolsuovymlsib5fx
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/zstd-1.5.7-bmaw6fn2i5mbbfujq6kf7bomodh4iudq
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/xz-5.6.3-zeynpnjapluctm4lxzuwo7en5jmdzt6c
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/json-c-0.18-tiufmaxqw63ukzmxnitx252njpuw5u6m
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libgpg-error-1.55-xxu2l5eriiiuags75aima3rzgvrjyd73
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gmake-4.4.1-5vb6e4beeoff4jan2t7edfjyi3hf3p7g
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/pigz-2.8-prsofdph5zl75k54hjwgcr34lipeyuh5
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libgcrypt-1.11.1-ln55ajiiwsden2bth7rjyxalakcvohms
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libxml2-2.13.5-7mdlpguaingjbgxrvtgjnv3y6372tofw
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/nghttp2-1.65.0-hpkxq4qziany2xflz5lpbo7ejwmchp6g
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libbsd-0.12.2-bcrniixykrt6nuyyxxpeyql3eew2b4qo
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/openssl-3.4.1-kphogwy3wlzx3rl6ddmjwui5qs77qvys
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/ncurses-6.5-u7sn2jtlvafr3vqli4m7i7ysecwkwepd
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/numactl-2.0.18-74aq3kxwhmje2sqvk27v73d7525q2enn
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gmp-6.3.0-zx3x4nm3djw5jdqxcsimfpxykoxdijhj
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/bzip2-1.0.8-vy2ggzhuzo7pav5clvz6dvamexpeaadk
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libxcrypt-4.4.38-iundcaqxew2asagohzi27rxmh2zbk4qo
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/pcre2-10.44-ayrshy3nkpdpkifxctnhm55l6vrlbogh
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/util-linux-uuid-2.41-o26ozsqsvcsshbvkfqqfzayrbsvqrv56
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/pdsh-2.31-b2w7bpkhnblanxmnygi6ve2kdcrhtwpl
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/berkeley-db-18.1.40-k5bepowzfoxlz67vuctewwbxlrj5sgji
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/expat-2.7.1-ut2qx6nkwctdtdl5ntd3ph4cpg7am4h3
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/curl-8.11.1-7xf5wleip2cn6wxcvm7rzjxbkj6b54a2
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libevent-2.1.12-dvz3n3eojbnxt74he2ky2rj75gukcgfh
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libedit-3.1-20240808-h766azt27z6p7yvfxwb22r23cxvtj3gj
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/readline-8.2-skysn5ppmam2ipxq4zlzwjxm42kurky2
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/hwloc-2.11.1-jhcvb6nk7guze7u7zojqrp5oxovharww
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/mpfr-4.2.1-abjn4yec4cwckmwvwwtg45keufsqyhya
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/munge-0.5.15-uwm6hk76javrgelx3hquaftz3qirdpdf
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/tar-1.35-ye5hcpfjk5svng6s2sjj4n6huwokazfk
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/cmake-3.31.8-usc3vzrzieyct5ep3kiyypm6vrc2s2ir
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gdbm-1.23-5yo63cnvgytwmsoiwoilhfgnyaffncmz
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/sqlite-3.46.0-zjvsjg7we5sw7bnbnlmkoncxr4oifuox
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/pmix-5.0.5-msnkjumpg75ybnv7uinrcbbkt4slvt3e
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/mpc-1.3.1-mkqx7budcw2rpbdzo63hsoxhhszx366g
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gettext-0.23.1-soasbhmurzckxvnvfcqm22jsegvmh4jv
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/perl-5.40.0-nsqyer7nqsmv3ams4gk5mubo74maob3z
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/elfutils-0.192-bqadq4z3npndbqqzkms7abk2ziqeteid
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/python-3.13.5-dcljl7pmhihbarcc2byuiij64bjq3orz
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/gcc-12.5.0-fmxnit5ggu45byub6wlsuienth2dkboh
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/krb5-1.21.3-zo73rgnlq3dcwy76ebibj2ubnzkhia2c
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/python-venv-1.0-hzcm35kuehmfy2lklxpykcapsib6ltch
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/openssh-9.9p1-2s7eddoqitn34vgpljqsrca3s7w7s6ud
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/glib-2.82.5-wpegaowgsfbhzrxyuqckqde5idz67u3v
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/openmpi-5.0.8-ezkzlw5tyusqajx2xapuphy7ijdp5ubz
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/slurm-23-11-1-1-ycmepbpfi45nohawqnwt7wlxhctgjqch
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/kvtree-1.5.0-hztyggwuil26qdhci7ecyhratqkeaxjt
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/rankstr-0.4.0-khn5kuon4eqabpsiritgs6jgnybegvei
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/spath-0.4.0-kmq4tumwh2sxwfzt7wuqo4mcmvu56iwb
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/lwgrp-1.0.6-aueg5csxqj2zqojy67575piexpb6n26m
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/libyogrt-1.35-7igkceogx7pbflqygrsejkew2t4uyahn
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/axl-0.9.0-maau75ypfwtdgufov4sixajqkpfdueat
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/shuffile-0.4.0-mo3jxy62lcy6r756jcprxgkm3ngtimr2
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/redset-0.4.0-sn64td3ppzg6wen6gw6qyuplxp4rkdor
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/dtcmp-1.1.5-pqglwfz6zwz6vkmmmmsnxklfmeoad57r
[+] /home/spack/spack/opt/spack/linux-x86_64_v3/er-0.5.0-vmunrpqq4a5xr6lwe72ja6h2vp6337ud
==> No binary for scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk found: installing from source
==> Installing scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk [68/69]
==> No patches needed for scr
==> scr: Executing phase: 'cmake'
==> scr: Executing phase: 'build'
==> Error: ProcessError: Command exited with status 2:
    '/home/spack/spack/opt/spack/linux-x86_64_v3/gmake-4.4.1-5vb6e4beeoff4jan2t7edfjyi3hf3p7g/bin/make' '-j4'

4 errors found in build log:
     218    make[2]: Leaving directory '/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt'
     219    make[2]: Entering directory '/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt'
     220    make[2]: Nothing to be done for 'examples/CMakeFiles/test_ckpt.dir/build'.
     221    make[2]: Leaving directory '/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt'
     222    [ 97%] Built target test_api_multiple
     223    [ 99%] Built target test_ckpt
  >> 224    /home/spack/devel-env/scr/src/scr_copy.c:53:1: error: expected ',' or ';' before 'int'
     225       53 | int print_usage()
     226	  | ^~~
     227    /home/spack/devel-env/scr/src/scr_copy.c: In function 'process_args':
     228    /home/spack/devel-env/scr/src/scr_copy.c:130:9: warning: implicit declaration of function 'print_usage' [-Wimplicit-function-declaration]
     229      130 |	    print_usage();
     230	  |	    ^~~~~~~~~~~
  >> 231    make[2]: *** [src/CMakeFiles/scr_copy.dir/build.make:82: src/CMakeFiles/scr_copy.dir/scr_copy.c.o] Error 1
     232    make[2]: Leaving directory '/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt'
  >> 233    make[1]: *** [CMakeFiles/Makefile2:1890: src/CMakeFiles/scr_copy.dir/all] Error 2
     234    make[1]: Leaving directory '/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt'
  >> 235    make: *** [Makefile:149: all] Error 2
     236    ==> scr: Executing phase: 'install'
     237    ==> [2025-08-06-09:29:47.799255] '/home/spack/spack/opt/spack/linux-x86_64_v3/gmake-4.4.1-5vb6e4beeoff4jan2t7edfjyi3hf3p7g/bin/make' '-j4' 'install'
     238    /home/spack/spack/opt/spack/linux-x86_64_v3/cmake-3.31.8-usc3vzrzieyct5ep3kiyypm6vrc2s2ir/bin/cmake -S/home/spack/devel-env/scr -B/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt --check-build-system CMakeFiles/Makefile.cmake 0
     239    /home/spack/spack/opt/spack/linux-x86_64_v3/cmake-3.31.8-usc3vzrzieyct5ep3kiyypm6vrc2s2ir/bin/cmake -E cmake_progress_start /tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt/CMakeFiles /tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt//CMakeFiles/progress.marks
     240    /home/spack/spack/opt/spack/linux-x86_64_v3/gmake-4.4.1-5vb6e4beeoff4jan2t7edfjyi3hf3p7g/bin/make  -f CMakeFiles/Makefile2 all
     241    make[1]: Entering directory '/tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-jsy37gt'

See build log for details:
  /tmp/spack/spack-stage/spack-stage-scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk/spack-build-out.txt

==> Warning: Skipping build of macsio-1.1-jubkwpoou3ayo4ety5p2jrvfsazgtqsr since scr-3.1.0-jsy37gt736a5ifpva433rav7v7zv6zsk failed
==> Error: macsio-1.1-jubkwpoou3ayo4ety5p2jrvfsazgtqsr: Package was not installed
==> Error: Installation request failed.	 Refer to reported errors for failing package(s).
